main.css
@font-face{
    font-family: Charis;
    src: url('font/CharisSIL-Regular.woff2') format('woff2'), url('font/CharisSIL-Regular.woff') format('woff');
    font-style: normal;
    font-weight: normal;
    font-display: swap;
}

@font-face{
    font-family: Charis;
    src: url('font/CharisSIL-Italic.woff2') format('woff2'), url('font/CharisSIL-Italic.woff') format('woff');
    font-style: italic;
    font-weight: normal;
    font-display: swap;
}

@font-face{
    font-family: Charis;
    src: url('font/CharisSIL-BoldItalic.woff2') format('woff2'), url('font/CharisSIL-BoldItalic.woff') format('woff');
    font-style: italic;
    font-weight: bold;
    font-display: swap;
}

@font-face{
    font-family: Charis;
    src: url('font/CharisSIL-Bold.woff2') format('woff2'), url('font/CharisSIL-Bold.woff') format('woff');
    font-style: normal;
    font-weight: bold;
    font-display: swap;
}
html {
    font-size: 2.4vw;
}

@media all and (min-width:1000px) { html { font-size:24px;} };
@media all and (max-width:520px) { html {font-size:18px;} };
* {
   box-sizing: border-box;
}

body {
    font-family: "Charis", serif;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    max-width: 1000px;
    min-height: 100%;
    position: relative;
    z-index: -10000; -webkit-font-smoothing: subpixel-antialiased;
}

img {
    max-width: 100%;
}  

/* CONTENT */
div#content {
    padding: 3rem 0 1.8rem 0;
    margin-left: 2.5rem;
    margin-right: 2.5rem;
}
div#content details > summary{
  font-feature-settings: "smcp" 1;
}
div#content details > :not(summary){
  margin-left: 1rem;
}

div#content ul{
  list-style-type: square;
}
a {
    text-decoration: none;
    color:inherit;
    position:relative;
    font-feature-settings: "smcp" 1;
}
a:hover {
    position:relative;
    background-color: #f3f3f3;
    transition-property: background;
    transition-duration: 0.2s;
    border-radius: 10px;
}

a:after {
    position: absolute;
    content: "\FEFF\035B";
    margin-left: 0.30em;
    font-size: 90%;
    top: -0.10em;
    font-feature-settings: "caps";
    font-variant-numeric: normal;
}

a#mail:after {
  content: normal;
}

